Revised playRound function in game.js; added few line of codes in event.js (previously definition.js)

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
 * {
+	font-size: 100%;
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+}
+
+*::, *::before *::after {
+	box-sizing: inherit;
 }
 
 body {
@@ -26,6 +31,7 @@ div button {
 	margin-bottom: 10px;
 	font-weight: 500;
 	font-size: 0.925rem;
+	border: none;
 }
 
 div button:hover {
